--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,3 +1,19 @@
 {
-  "editProfile": "Editar perfil"
+  "editProfile": "Editar perfil",
+  "memento": "Memento",
+  "server_error": "Error en el servidor",
+  "error": "Errror",
+  "login_pass_user_mustbe_4long": "La contraseña debe ser de 4 letras minimo.",
+  "login_user_havent_found": "No hemos encontrado ninguna cuenta con esa combinacion de usuario y contraseña.",
+  "connection_error": "Hubo un problema con la conexión a internet.",
+  "server_error_description": "Hubo un problema con el servidor, por  favor vuelve a intentarlo más tarde.",
+  "username": "Nombre de usuario",
+  "password": "Contraseña",
+  "login": "Login",
+  "dont_have_an_account": "¿No tienes una cuenta?",
+  "signup": "Sign up"
+
+
+
+
 }
