--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,15 +4,27 @@
     "description": "Edit profile "
   },
   "memento": "Memento",
+  "@memento": {
+    "description": "App name "
+  },
   "server_error": "Server error",
   "error": "Errror",
-  "login_pass_user_mustbe_4long": "Password must be 4 characters long.",
+  "login_error": "Login error",
+  "login_pass_mustbe_4long": "Password must be 4 characters long.",
   "login_user_havent_found": "We haven't found any account with that combination of username and password.",
-  "connection_error": "There was a problem with the internet connection.",
+  "connection_error": "Connection error.",
+  "connection_error_description": "There was a problem with the internet connection.",
   "server_error_description": "There was a problem with the server, please try again later.",
   "username": "Username",
+  "username_hint": "Enter your username",
   "password": "Password",
+  "password_hint": "Minimum 4 characters",
   "login": "Login",
   "dont_have_an_account": "Dont have an account?",
   "signup": "Sign up",
+  "create_an_account": "Create an account",
+  "repeat_password": "Repeat password",
+  "repeat_password_hint": "Repeat your password",
+  "email": "Email",
+  "email_hint": "Enter your email"
 }
