--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -40,5 +40,6 @@
   "username_already_registered_description": "Please try to sign up using another username or log in if you already have an account.",
   "email_already_in_use": "That email is already in use",
   "email_already_in_use_description": "There is already an account registered with that email.",
-  "sign_out": "Sign out"
+  "sign_out": "Sign out",
+  "friends_list": "Friends list"
 }
