--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -52,5 +52,23 @@
   "selectAnImage": "Select a photo",
   "uploadPhotoReel": "Upload photo to reel",
   "browseGalery": "Browse galery",
-  "takeAPicture": "Take a picture"
+  "takeAPicture": "Take a picture",
+  "friends": "Friends",
+  "addFriends": "Add friends",
+  "friendRequests": "Friend requests",
+  "noNewFriendRequests": "There aren't any new friend requests",
+  "user_list": "User list",
+  "friendswitheveryone": "You are friends with every user of the app",
+  "friendshipDeleted": "Friendship deleted",
+  "friendshipDeletedDESC": "You are no longer friends with user ",
+  "friendRequestCREATED": "Friendship created",
+  "friendRequestCREATED_DESC": "A friend request has been created with user ",
+  "friendRequestPENDING": "Friendship pending",
+  "pendingFriendRequestWITHUser": "You have already a pending friend request with user ",
+  "pendingFriendRequestFROMUser": "You have already a pending friend request from user ",
+  "friendRequestACEPTED": "Friend request accepted",
+  "friendRequestACEPTED_DESC": "You have accepted the friend request from user ",
+  "friendRequestDENIED": "Friend request denied",
+  "friendRequestDENIED_DESC": "You have denied the friend request from user ",
+  "youHaventAddedUsers": "Oops, it seems like you haven't added any users yet"
 }
