--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -46,5 +46,23 @@
   "selectAnImage": "Selecciona una foto",
   "uploadPhotoReel": "Subir foto al carrete",
   "browseGalery": "Buscar en la galería",
-  "takeAPicture": "Sacar una foto"
+  "takeAPicture": "Sacar una foto",
+  "friends": "Amigos",
+  "addFriends": "Añadir amigos",
+  "friendRequests": "Solicitudes de amistad",
+  "noNewFriendRequests": "No hay solicitudes de amistad nuevas",
+  "user_list": "Lista de usuarios",
+  "friendswitheveryone": "Eres amigo de todos los usuarios actuales de la aplicación",
+  "friendshipDeleted": "Amistad borrada",
+  "friendshipDeletedDESC": "Ya no eres amigo del usuario ",
+  "friendRequestCREATED": "Solicitud de amistad creada",
+  "friendRequestCREATED_DESC": "Se ha creado una solicitud de amistad con el usuario ",
+  "friendRequestPENDING": "Solicitud de amistad pendiente",
+  "pendingFriendRequestWITHUser": "Ya tienes una solicitud de amistad pendiente con el usuario ",
+  "pendingFriendRequestFROMUser": "Ya tienes una solicitud de amistad pendiente del usuario ",
+  "friendRequestACEPTED": "Solicitud de amistad aceptada",
+  "friendRequestACEPTED_DESC": "Has aceptado la solicitud de amistad del usuario ",
+  "friendRequestDENIED": "Solicitud de amistad denegada",
+  "friendRequestDENIED_DESC": "Has denegado la solicitud de amistad del usuario ",
+  "youHaventAddedUsers": "Vaya, parece que no has agregado a ningún usuario de momento"
 }
