--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -65,5 +65,7 @@
   "friendRequestDENIED": "Solicitud de amistad denegada",
   "friendRequestDENIED_DESC": "Has denegado la solicitud de amistad del usuario ",
   "youHaventAddedUsers": "Vaya, parece que no has agregado a ningún usuario de momento",
-  "editPhoto": "Editar foto"
+  "editPhoto": "Editar foto",
+  "deletedImage": "Imagen eliminada",
+  "deletedImage_DESC": "La imagen ha sido eliminada del servidor"
 }
