Editar foto de perfil - internacionalizado - repasar foto carrete inicio

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -3,13 +3,13 @@
   "memento": "Memento",
   "server_error": "Error en el servidor",
   "error": "Errror",
-  "unexpected_error": "Error inesperado, por favor intentalo de nuevo más tarde.",
+  "unexpected_error": "Error inesperado, por favor intentalo de nuevo más tarde",
   "login_error": "Error al hacer login",
-  "login_pass_mustbe_4long": "La contraseña debe ser de 4 caracteres mínimo.",
-  "login_user_havent_found": "No hemos encontrado ninguna cuenta con esa combinacion de usuario y contraseña.",
-  "connection_error": "Connection error.",
-  "connection_error_description": "Hubo un problema con la conexión a internet.",
-  "server_error_description": "Hubo un problema con el servidor, por favor vuelve a intentarlo más tarde.",
+  "login_pass_mustbe_4long": "La contraseña debe ser de 4 caracteres mínimo",
+  "login_user_havent_found": "No hemos encontrado ninguna cuenta con esa combinacion de usuario y contraseña",
+  "connection_error": "Connection error",
+  "connection_error_description": "Hubo un problema con la conexión a internet",
+  "server_error_description": "Hubo un problema con el servidor, por favor vuelve a intentarlo más tarde",
   "username": "Nombre de usuario",
   "username_hint": "Introduce tu nombre de usuario",
   "password": "Contraseña",
@@ -23,17 +23,17 @@
   "email": "Email",
   "email_hint": "Introduce tu email",
   "fill_all_data": "Rellena todos los campos",
-  "fill_add_data_description": "Por favor, rellena todos los campos.",
+  "fill_add_data_description": "Por favor, rellena todos los campos",
   "not_a_valid_email": "Correo no valido",
-  "not_a_valid_email_description": "Por favor introduce un correo válido.",
+  "not_a_valid_email_description": "Por favor introduce un correo válido",
   "not_a_valid_password": "Contraseña no válida",
-  "not_a_valid_password_description": "Tu contraseña debe tener una longitud de al menos 4 caracteres.",
+  "not_a_valid_password_description": "Tu contraseña debe tener una longitud de al menos 4 caracteres",
   "passwords_dont_match": "Las contraseñas no coinciden",
-  "passwords_dont_match_description": "Por favor, vuelve a escribir las contraseñas.",
+  "passwords_dont_match_description": "Por favor, vuelve a escribir las contraseñas",
   "username_already_registered": "Ese nombre de usuario ya está registrado",
-  "username_already_registered_description": "Por favor, intenta usar otro nombre de usuario o haz login si ya tienes una cuenta.",
+  "username_already_registered_description": "Por favor, intenta usar otro nombre de usuario o haz login si ya tienes una cuenta",
   "email_already_in_use": "Ese correo ya esta en uso",
-  "email_already_in_use_description": "Ya existe una cuenta registrada con ese correo.",
+  "email_already_in_use_description": "Ya existe una cuenta registrada con ese correo",
   "sign_out": "Cerrar sesion",
   "currentReel": "Carrete actual ",
   "reel_singular": " carrete",
@@ -42,7 +42,7 @@
   "of9photos": " de 9 fotos",
   "noImageSelectedYet": "No has seleccionado una foto aún",
   "currentReelIsFull": "El carrete actual está lleno",
-  "OR": "O",
+  "or": "O",
   "selectAnImage": "Selecciona una foto",
   "uploadPhotoReel": "Subir foto al carrete",
   "browseGalery": "Buscar en la galería",
@@ -82,5 +82,8 @@
   "credentialsUpdated": "Tus credenciales se han actualizado",
   "currentPasswordIsWrong": "Tu contraseña actual está mal",
   "currentPasswordIsWrongHint": "Por favor, vuelve a escribir tu contraseña actual",
-  "editProfilePicture": "Editar foto de perfil"
+  "editProfilePicture": "Editar foto de perfil",
+  "selectNewPicture": "Selecciona una nueva foto",
+  "profilePictureUpdated": "Tu foto de perfil se ha actualizado",
+  "selectNewPictureHint": "Selecciona una nueva foto de perfil"
 }
