--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,13 +9,13 @@
   },
   "server_error": "Server error",
   "error": "Errror",
-  "unexpected_error": "Unexpected error, please try again later.",
+  "unexpected_error": "Unexpected error, please try again later",
   "login_error": "Login error",
-  "login_pass_mustbe_4long": "Password must be 4 characters long.",
-  "login_user_havent_found": "We haven't found any account with that combination of username and password.",
-  "connection_error": "Connection error.",
-  "connection_error_description": "There was a problem with the internet connection.",
-  "server_error_description": "There was a problem with the server, please try again later.",
+  "login_pass_mustbe_4long": "Password must be 4 characters long",
+  "login_user_havent_found": "We haven't found any account with that combination of username and password",
+  "connection_error": "Connection error",
+  "connection_error_description": "There was a problem with the internet connection",
+  "server_error_description": "There was a problem with the server, please try again later",
   "username": "Username",
   "username_hint": "Enter your username",
   "password": "Password",
@@ -29,17 +29,17 @@
   "email": "Email",
   "email_hint": "Enter your email",
   "fill_all_data": "Fill all the data",
-  "fill_add_data_description": "Please, fill all the data.",
+  "fill_add_data_description": "Please, fill all the data",
   "not_a_valid_email": "Not a valid email",
-  "not_a_valid_email_description": "Please enter a valid email.",
+  "not_a_valid_email_description": "Please enter a valid email",
   "not_a_valid_password": "Not a valid password",
-  "not_a_valid_password_description": "Your password should be at least 4 characters long.",
+  "not_a_valid_password_description": "Your password should be at least 4 characters long",
   "passwords_dont_match": "Passwords don't match",
-  "passwords_dont_match_description": "Please rewrite the passwords.",
+  "passwords_dont_match_description": "Please rewrite the passwords",
   "username_already_registered": "That username is already registered",
-  "username_already_registered_description": "Please try to sign up using another username or log in if you already have an account.",
+  "username_already_registered_description": "Please try to sign up using another username or log in if you already have an account",
   "email_already_in_use": "That email is already in use",
-  "email_already_in_use_description": "There is already an account registered with that email.",
+  "email_already_in_use_description": "There is already an account registered with that email",
   "sign_out": "Sign out",
   "currentReel": "Current reel ",
   "reel_singular": " reel",
@@ -88,5 +88,8 @@
   "credentialsUpdated": "Your credentials have been updated",
   "currentPasswordIsWrong": "Your current password is wrong",
   "currentPasswordIsWrongHint": "Please, write your current password again",
-  "editProfilePicture": "Edit profile picture"
+  "editProfilePicture": "Edit profile picture",
+  "selectNewPicture": "Select a new picture",
+  "profilePictureUpdated": "Your profile picture has been updated",
+  "selectNewPictureHint": "Select a new profile picture"
 }
