Refractors y cambios (quitado loading overlay de editar descripcion carrete)

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -7,14 +7,14 @@
   "login_error": "Error al hacer login",
   "login_pass_mustbe_4long": "La contraseña debe ser de 4 caracteres mínimo",
   "login_user_havent_found": "No hemos encontrado ninguna cuenta con esa combinacion de usuario y contraseña",
-  "connection_error": "Connection error",
+  "connection_error": "Error de conexión",
   "connection_error_description": "Hubo un problema con la conexión a internet",
   "server_error_description": "Hubo un problema con el servidor, por favor vuelve a intentarlo más tarde",
   "username": "Nombre de usuario",
   "username_hint": "Introduce tu nombre de usuario",
   "password": "Contraseña",
   "password_hint": "Longitud mínima de 4 caracteres",
-  "login": "Login",
+  "login": "Iniciar sesión",
   "dont_have_an_account": "¿No tienes una cuenta?",
   "signup": "Crear una cuenta",
   "create_an_account": "Crear una cuenta",
