--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -2,9 +2,10 @@
   "editProfile": "Editar perfil",
   "memento": "Memento",
   "server_error": "Error en el servidor",
-  "error": "Errror",
+  "error": "Error",
   "unexpected_error": "Error inesperado, por favor intentalo de nuevo más tarde",
   "login_error": "Error al hacer login",
+  "login_errorDESC": "No hemos encontrado una cuenta con esa combinación de nombre de usuario y contraseña",
   "login_pass_mustbe_4long": "La contraseña debe ser de 4 caracteres mínimo",
   "login_user_havent_found": "No hemos encontrado ninguna cuenta con esa combinacion de usuario y contraseña",
   "connection_error": "Error de conexión",
